# incubator-carbondata

./: .gitignore  README.md  build.sh  pom.xml  versions.md
.build_config/: build_carbon.sh  carbon_settings.xml  deploy.sh  test_carbon.sh
.build_config/CI/: 1.6.1_KernelCarbon_2.2_MRS.xml  1.6.1_KernelCarbon_2.3_MRS.xml  SHAGenerator.sh  snapshot.sh
.cid/: dplatform-carbon.yml
SDVTESTDATA/: complexTypeDecimalNestedHive.csv
assembly/: pom.xml
cloud/: pom.xml
cloud/conf/: carbon.properties  spark-defaults.conf
common/: pom.xml
common-plugin/: pom.xml
common_plugin/: pom.xml
core/: pom.xml
datamap/bloom/: pom.xml
datamap/examples/: pom.xml
datamap/lucene/: pom.xml
dev/: findbugs-exclude.xml  huawei-scalastyle-config.xml  huawei.header  javastyle-suppressions.xml
docs/: datamap-developer-guide.md  ddl-of-carbondata.md  dml-of-carbondata.md  quick-start-guide.md  sdk-guide.md
docs/datamap/: datamap.md  mv-datamap-guide.md
docs/index/: materialized-view-guide.md
examples/flink/: pom.xml
examples/spark/: pom.xml
examples/spark2/: build.sh  pom.xml
fleet/: CarbonAI.md  DO_NOT_CHANGE_ANYTHING_UNDER_FLEET_DIR  carbonai_demo.md
fleet/ai-intf/: pom.xml
fleet/cloud/: pom.xml
format/: pom.xml
geo/: pom.xml
hadoop/: pom.xml
mv/core/: pom.xml
processing/: pom.xml
secondary_index/: pom.xml
select/vision-native/: CMakeLists.txt  pom.xml
select/vision-native/src/main/c/: carbonvision.cpp
select/vision-native/src/main/c/head/: algorithm_plugin_common.h  carbonvision.h  user_formula_cpu.h
streaming/: pom.xml
vector/: pom.xml
(+1723 files in other folders)
